# website

./: Cargo.toml  README.md  cache.sh  flake.nix
assets/: header.css  main.css  navbar.css
assets/js/: show_canvas.js
assets/styles/: backdrop.css  examples.css  header.css  main.css  navbar.css
assets/sursface_examples/: cube_camera.js  cube_camera_bg.wasm.d.ts  hello_triangle.d.ts  hello_triangle.js  hello_triangle_bg.wasm  hello_triangle_bg.wasm.d.ts  hello_window.d.ts  hello_window.js  hello_window_bg.wasm  hello_window_bg.wasm.d.ts  mandelbrot_bg.wasm  spinning_cube.d.ts  spinning_cube.js  spinning_cube_bg.wasm.d.ts
src/: main.rs  settings.rs  templates.rs
src/data/: mod.rs  navbar.rs  static_paths.rs
templates/: backdrop.html  base.html  examples.html  header.html  main.html  navbar.html  projects.html
templates/blog/: blog.html  blog_base.html  crust.html
templates/examples/: examples_base.html  sayle.html  sursface.html  wasm_example.html
templates/projects/: projects_base.html  sursface.html  website.html
templates/secret/: crust.html
